# tsdistances

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  bench.py  build.rs  main.py  pyproject.toml  rust-toolchain.toml  times_aeon.npy  times_tsdistances.npy
.github/workflows/: CI.yml  ci.yml  cleanup.yml  tsdistances.yml
gpu/: .gitignore  Cargo.toml  krnl-cache.rs
gpu/src/: device.rs  kernels.rs  lib.rs  matrix.rs  warps copy.rs  warps.rs
gpu/src/kernels/: dtw.rs  euclidean.rs  mod.rs  warp_gpu.rs
python/tsdistances/: __init__.py
src/: diagonal.rs  diagonal_old.rs  diagonalv2.rs  distances.rs  elastic_distances.rs  elastic_distances_old.rs  lib.rs  matrix.rs  utils.rs  warps.rs
tests/: run_all.py  run_once.py  test_benchmark.py  test_correctness.py  test_correctness_cpu.py  test_correctness_gpu.py  test_distances.py  test_jss.py  test_speed.py  test_speed_cpu.py  test_speed_gpu.py
tsdistances/: __init__.py  tsdistances.py
tsdistances/core/: diagonal.rs  lib.rs
tsdistances_gpu/: Cargo.toml
tsdistances_gpu/src/: kernels.rs  lib.rs  tests.rs  utils.rs  warps.rs
