[package]
name = "tsdistances_gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "6.1.0"
lazy_static = "1.5.0"
rand = "0.8.5"
rustfft = "6.2.0"

[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3

[build-dependencies]
spirv-builder = "0.9"